QSF - Candidate Referral/src/objects/QSF_RFL_Referral__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>QSF_RFL_Application__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The referrer not only wants to refer this person but also recommends him</description>
        <inlineHelpText>The referrer not only wants to refer this person but also recommends him</inlineHelpText>
        <label>Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Relative/Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have worked with him</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Comments__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Referrer__c</columns>
        <columns>Relationship__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>